build custom jre to reduce image size